@@ -18,7 +18,7 @@ yamltest:       '= 0.7.0'
 rubyless:       '= 0.8.5'
 property:       '= 2.2.0'
 versions:       '= 0.3.1'
-zafu:           '= 0.8.1'
+zafu:           '= 0.8.2'
 
 jeweler:
 
