@@ -6,9 +6,9 @@ assert_visible 'add11_title'
 type 'add11_title', 'add1'
 click 'css=input[type=submit]'
 wait_for_not_visible 'add11_title'
-verify_text 'css=.liadd1 a', 'add1'
+verify_text 'css=.add1 a', 'add1'
 # should have correct parent
-verify_text 'css=.liadd1 > span', 'Kill the bugs'
+verify_text 'css=.add1 > span', 'Kill the bugs'
 
 # Add a second element
 assert_not_visible 'add11_title'
@@ -17,6 +17,6 @@ assert_visible 'add11_title'
 type 'add11_title', 'add1_2'
 click 'css=input[type=submit]'
 wait_for_not_visible 'add11_title'
-verify_text 'css=.liadd1_2 a', 'add1_2'
+verify_text 'css=.add1_2 a', 'add1_2'
 # should have correct parent
-verify_text 'css=.liadd1_2 > span', 'Kill the bugs'
+verify_text 'css=.add1_2 > span', 'Kill the bugs'
