@@ -6,9 +6,9 @@ assert_visible 'add21_title'
 type 'add21_title', 'add2'
 click 'css=input[type=submit]'
 wait_for_not_visible 'add21_title'
-verify_text 'css=.liadd2 a', 'add2'
+verify_text 'css=.add2 a', 'add2'
 # should have set parent
-verify_text 'css=.liadd2 > span', 'Zena the wild CMS'
+verify_text 'css=.add2 > span', 'Zena the wild CMS'
 
 # Add a second element
 assert_not_visible 'add21_title'
@@ -17,6 +17,6 @@ assert_visible 'add21_title'
 type 'add21_title', 'add2_2'
 click 'css=input[type=submit]'
 wait_for_not_visible 'add21_title'
-verify_text 'css=.liadd2_2 a', 'add2_2'
+verify_text 'css=.add2_2 a', 'add2_2'
 # should have set parent
-verify_text 'css=.liadd2_2 > span', 'Zena the wild CMS'
+verify_text 'css=.add2_2 > span', 'Zena the wild CMS'
