@@ -9,8 +9,16 @@ type 'edit11_title', 'Kill the bugs ok'
 
 # submit
 click 'css=input[type=submit]'
-wait_for_element_present 'css=#edit11 li.title'
+wait_for_element_not_present 'edit11_title'
 verify_text "css=#edit11 li.title", "Kill the bugs ok"
+
+# edit again
+click 'link=edit'
+wait_for_element_present 'edit11_title'
+
+# cancel
+click 'css=img[alt="cancel"]'
+wait_for_element_not_present 'edit11_title'
 
 # edit again
 click 'link=edit'
@@ -19,5 +27,5 @@ type 'edit11_title', 'Kill the bugs'
 
 # submit
 click 'css=input[type=submit]'
-wait_for_element_present 'css=#edit11 li.title'
+wait_for_element_not_present 'edit11_title'
 verify_text "css=#edit11 li.title", "Kill the bugs"
