@@ -12,10 +12,18 @@ type 'edit21_title', @new_title
 
 # submit
 click 'css=input[type=submit]'
-wait_for_element_present 'css=#edit21 li.title'
+wait_for_element_not_present 'edit21_title'
 verify_text "css=#edit21 li.title", @new_title
 
 # edit again (click on 'v_status' checkbox)
+click 'link=edit'
+wait_for_element_present 'edit21_title'
+
+# cancel
+click 'css=img[alt="cancel"]'
+wait_for_element_not_present 'edit21_title'
+
+# edit again
 click 'link=edit'
 wait_for_element_present 'edit21_title'
 type 'edit21_title', @old_title
@@ -23,7 +31,7 @@ click 'css=#edit2 input[type=checkbox]'
 
 # submit
 click 'css=input[type=submit]'
-wait_for_element_present 'css=#edit21 li.title'
+wait_for_element_not_present 'edit21_title'
 verify_text "css=#edit21 li.title", @old_title
 
 # ensure page is published
