@@ -1,0 +1,40 @@
+@old_title = 'Kill the bugs'
+@new_title = 'New Ajax page'
+
+open '/oo/testnode37.html?test=edit3'
+assert_element_not_present 'edit31_title'
+verify_text "css=#edit31 td.title", @old_title
+
+# edit (does not click on 'v_status' checkbox)
+click 'link=edit'
+wait_for_element_present 'edit31_title'
+type 'edit31_title', @new_title
+
+# submit
+click 'css=input[type=submit]'
+wait_for_element_not_present 'edit31_title'
+verify_text "css=#edit31 td.title", @new_title
+
+# edit again
+click 'link=edit'
+wait_for_element_present 'edit31_title'
+
+# cancel
+click 'css=img[alt="cancel"]'
+wait_for_element_not_present 'edit31_title'
+
+# edit again
+click 'link=edit'
+wait_for_element_present 'edit31_title'
+# Ensure we do proper ajax replacements
+assert_element_not_present 'css=#edit3 form form'
+type 'edit31_title', @old_title
+
+# submit
+click 'css=input[type=submit]'
+wait_for_element_not_present 'edit31_title'
+verify_text "css=#edit31 td.title", @old_title
+
+# ensure changes are recorded
+open '/oo/testnode37.html?test=edit3'
+verify_text "css=#title .s70 #_title37", @old_title
